# libncpcolor

./: .gitignore  Doxyfile  Makefile  Makefile.am  README.docx  README.md  annotated.html  basic_8cpp-example.html  bin.py  buildluts.py  class_base_variable-members.html  class_base_variable.html  class_linear_norm-members.html  class_linear_norm.html  class_log_norm-members.html  class_log_norm.html  class_lookup_table-members.html  class_lookup_table.html  class_nc_att-members.html  class_nc_att.html  class_nc_dim-members.html  class_nc_dim.html  class_nc_error-members.html  class_nc_error.html  class_nc_file-members.html  class_nc_file.html  class_nc_slice_file-members.html  class_nc_slice_file.html  class_nc_typed_component-members.html  class_nc_typed_component.html  class_nc_values-members.html  class_nc_values.html  class_nc_var-members.html  class_nc_var.html  class_slice_type-members.html  class_slice_type.html  class_variable-members.html  class_variable.html  class_variable_3_01_t_01_4.html  classes.html  (+48 more)
examples/: basic.cpp  example.nc
luts/: Accent  Accent.h  Blues  Blues.h  BrBG  BrBG.h  BuGn  BuGn.h  BuPu  BuPu.h  CMRmap  CMRmap.h  Dark2  Dark2.h  GnBu  GnBu.h  Greens  Greens.h  Greys  Greys.h  OrRd  OrRd.h  Oranges  Oranges.h  PRGn  PRGn.h  Paired  Paired.h  Pastel1  Pastel1.h  Pastel2  Pastel2.h  PiYG  PiYG.h  PuBu  PuBu.h  PuBuGn  PuBuGn.h  PuOr  PuOr.h  (+97 more)
search/: all_5f.js  all_62.js  all_63.js  all_69.js  all_6c.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_76.js  all_77.js  all_78.js  classes_62.js  classes_6c.js  classes_6e.js  classes_73.js  files_6c.js  files_6e.js  files_77.js  functions_62.js  functions_64.js  functions_66.js  functions_67.js  functions_6c.js  functions_6d.js  functions_6e.js  functions_70.js  functions_72.js  functions_73.js  functions_76.js  functions_77.js  functions_79.js  functions_7e.js  pages_6c.js  search.js  typedefs_73.js  typedefs_76.js  variables_6c.js  variables_70.js  (+1 more)
